--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.json",
+    "start": "ng serve --proxy-config proxy.config.json --port 5000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,13 +23,13 @@
     "@angular/router": "^4.0.0",
     "@swimlane/ngx-charts": "^4.3.0",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "2.0.0-beta.8",
     "clarity-angular": "^0.8.12",
     "clarity-icons": "^0.8.12",
     "clarity-ui": "^0.8.12",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
-    "firebase": "^3.7.3",
+    "firebase": "3.7.3",
     "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
